[project]
name = "survivorgraph"
version = "0.1.0"
description = "Graph RAG vs Traditional RAG demo using Survivor Wikipedia data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pandas>=2.2",
    "lxml>=5.1",
    "neo4j>=5.17",
    "psycopg2-binary>=2.9",
    "openai>=1.12",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.hatch.build.targets.wheel]
packages = ["lib"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
